--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="empty"></div>
           <h1 class="designer-title">Why Designers are Important!</h1>
         </div>
-        <p>
+        <p class="has-dropcap">
           <b>Lorem ipsum</b> dolor sit, amet consectetur adipisicing elit. Cum
           molestiae nobis ullam at, accusamus eaque veniam dignissimos
           laudantium aliquam eos suscipit quis error, vitae id dolorum
