extra styling practice

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <section class="bord-1 coolsite">
-      <h1>Hey there I have a cool site</h1>
+      <h1>Hey there I have a cool site.</h1>
     </section>
     <section class="designer-description">
       <div class="information">
